<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff7039">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Line1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/Personal"
                android:textStyle="italic"
                android:textSize="40sp"/>
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:layout_marginLeft="230dp"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/driver"
                android:id="@+id/id_img1"
                android:clickable="false"
                android:contextClickable="false" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="30sp"
                android:text="@string/You_may"
                android:id="@+id/title1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/title1"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:text="@string/words"/>
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="240dp"
                android:layout_centerVertical="true"
                android:src="@drawable/message" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:text="@string/words2"/>
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/speak" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:text="@string/words2"/>
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="243dp"
                android:layout_marginTop="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/earning" />

        </RelativeLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Line1">
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/location"
            android:id="@+id/id_img5"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="240dp"
            android:layout_below="@+id/id_img5"
            android:layout_marginTop="35dp"
            android:src="@drawable/setting"
            android:id="@+id/id_img6"/>
        <ImageButton
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/talk"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>


</RelativeLayout>