<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <RelativeLayout
        android:id="@+id/id_toplayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/backgroud">
        <ImageView
            android:id="@+id/id_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/driver"/>
        <TextView
            android:id="@+id/info_username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/id_head" />
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:background="#ffffff"
        android:layout_below="@id/id_toplayout">

        <TableRow
            android:layout_height="30dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/Realname"
                android:textSize="22sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/info_realname"
                android:textSize="22sp"
                android:textColor="#000000"
                android:gravity="right"/>

        </TableRow>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ff888888" />

        <TableRow
            android:layout_height="30dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textSize="22sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/info_email"
                android:textSize="22sp"
                android:textColor="#000000"
                android:gravity="right"/>

        </TableRow>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ff888888" />

        <TableRow
            android:layout_height="30dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="22sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/info_phone"
                android:textSize="22sp"
                android:textColor="#000000"
                android:gravity="right"/>

        </TableRow>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ff888888" />

        <TableRow
            android:layout_height="30dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_height="wrap_content"
                android:text="司机编号："
                android:textSize="22sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/info_driverId"
                android:textSize="22sp"
                android:textColor="#000000"
                android:gravity="right"/>

        </TableRow>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ff888888" />

        <TableRow
            android:layout_height="30dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_height="wrap_content"
                android:text="支付宝账号："
                android:textSize="22sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/info_alipay"
                android:textSize="22sp"
                android:textColor="#000000"
                android:gravity="right"/>

        </TableRow>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ff888888" />

        <TableRow
            android:layout_height="30dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_height="wrap_content"
                android:text="车牌号："
                android:textSize="22sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_height="wrap_content"
                android:id="@+id/info_carnum"
                android:textSize="22sp"
                android:textColor="#000000"
                android:gravity="right"/>

        </TableRow>

        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="#ff888888" />

        <TableRow
            android:layout_height="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_height="wrap_content"
                android:text="所在城市："
                android:textSize="22sp"
                android:textColor="#000000"/>
            <TextView
                android:layout_height="wrap_content"
                android:text="上海"
                android:textSize="22sp"
                android:textColor="#000000"
                android:gravity="right"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>